# reit-real-estate

./: .gitignore  Makefile  README.md  go.mod  go.sum
blockchain/reit/: .gitignore  Anchor.toml  Cargo.toml
blockchain/reit/programs/reit_rent/: Cargo.toml
blockchain/reit/programs/reit_rent/src/: errors.rs  events.rs  lib.rs  math.rs  state.rs
blockchain/reit/programs/reit_rent/src/instructions/: claim.rs  create_property.rs  deposit_rent.rs  mod.rs  sync_user.rs
cmd/api/: main.go
config/: config.go  config_example.yaml
internal/api/: api.go  properties.go  users.go
internal/dto/: adapters.go  consts.go  dto.go  validate.go
internal/repository/properties/: model.go  repository.go
internal/repository/tokens/: model.go  repository.go
internal/repository/users/: model.go  repository.go
internal/repository/usersTokens/: model.go  repository.go
internal/repository/wallets/: model.go  repository.go
internal/service/: properties.go  service.go  tokens.go  users.go  wallets.go
migrations/: 20250913_ddl.sql
pkg/adapter/internal/anchor/: accounts.go
pkg/adapter/internal/anchor/tx/: builder.go  signencode.go
pkg/adapter/internal/anchor/utils/: money.go  pda.go
pkg/adapter/internal/pkg/reit/: adapter.go  models.go
pkg/adapter/internal/pkg/reit/scripts/: admin-keypair.json  create_reit_mint.mjs  create_reit_mint.ts  package-lock.json  package.json
pkg/adapter/internal/solana/: client.go  types.go
pkg/postgres/: postgres.go
