[package]
name = "reit_rent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reit_rent"

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl  = { version = "0.31.1", features = ["associated_token", "token"] }

[features]
no-entrypoint = []
idl-build = []
cpi = []
default = []

[profile.release]
overflow-checks = true
